--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,14 +24,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //google sign-in
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:design:25.3.0'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    //database
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
+    //Firebase authentication
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    //Firebase database
+    compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
